--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,40 +22,35 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": [
-    "react",
-    "react-hooks",
-    "@typescript-eslint",
-    "prettier"
-  ],
+  "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
   "rules": {
-    "react/jsx-props-no-spreading":"off",
-    "react/prop-types":"off",
-    "react/jsx-one-expression-per-line":"off",
-    "react-hooks/rules-of-hooks":"error",
-    "react-hooks/exhaustive-deps":"warn",
-    "react/jsx-filename-extension":[1, {"extensions":["tsx"]}],
-    "import/prefer-default-export":"off",
-    "@typescript-eslint/explicit-function-return-type":[
+    "react/jsx-props-no-spreading": "off",
+    "react/prop-types": "off",
+    "no-unused-expressions": "off",
+    "react/jsx-one-expression-per-line": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
+    "react/jsx-filename-extension": [1, { "extensions": ["tsx"] }],
+    "import/prefer-default-export": "off",
+    "@typescript-eslint/explicit-function-return-type": [
       "error",
       {
-        "allowExpressions":true
+        "allowExpressions": true
       }
     ],
     "prettier/prettier": "error",
-    "import/extensions":[
+    "import/extensions": [
       "error",
       "ignorePackages",
       {
-        "ts":"never",
+        "ts": "never",
         "tsx": "never"
       }
     ]
-
   },
   "settings": {
-    "import/resolver":{
-      "typescript":{}
+    "import/resolver": {
+      "typescript": {}
     }
   }
 }
