--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -22,6 +22,10 @@
   "rules": {
     "prettier/prettier": "error",
     "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/interface-name-prefix": [
+      "error",
+      { "prefixWithI": "always" }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
