feat(backend): add aws s3 implementetion to StorageProvider

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,10 @@
+#JWT
 APP_SECRET=
+#APP
 APP_API_URL=http://localhost:3333
 APP_WEB_URL=http://localhost:3000
+#AWS S3
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+#STORAGE
+STORAGE_DRIVER=disk
